--- a/events.html
+++ b/events.html
@@ -191,10 +191,10 @@
             <div class="slide active">
                 <div class="featured-label">MP SCRIMS EVENT</div>
                 <div class="match-title">
-                    <span style="color:var(--purple)">4KT</span> <span class="match-vs">VS</span> <span>TEF RESURGENCE</span>
+                    <span style="color:var(--purple)">4KT</span> <span class="match-vs">VS</span> <span>7SIN ESPORTS</span>
                 </div>
                 <p style="color:var(--gold); font-size:1.2rem; font-weight:bold; letter-spacing:4px;">IRON CLAW DUEL</p>
-                <p style="color:#888; margin-top:5px;">CONCLUDED</p>
+                <p style="color:#888; margin-top:5px;">21:00pm wat</p>
 
                 <div class="timer-display" id="timer-ironclaw">
                     <div class="t-box"><div class="t-val h">00</div><div class="t-label">HOURS</div></div>
