--- a/events.html
+++ b/events.html
@@ -191,7 +191,7 @@
             <div class="slide active">
                 <div class="featured-label">MP SCRIMS EVENT</div>
                 <div class="match-title">
-                    <span style="color:var(--purple)">4KT</span> <span class="match-vs">VS</span> <span>7SIN ESPORTS</span>
+                    <span style="color:var(--purple)">4KT</span> <span class="match-vs">VS</span> <span>7SIN</span>
                 </div>
                 <p style="color:var(--gold); font-size:1.2rem; font-weight:bold; letter-spacing:4px;">IRON CLAW DUEL</p>
                 <p style="color:#888; margin-top:5px;">21:00pm wat</p>
@@ -205,15 +205,15 @@
                 <div class="intel-bar">
                     <div class="intel-segment">
                         <div class="intel-head">HARDPOINT</div>
-                        <div class="intel-data">TAKEOFF</div>
+                        <div class="intel-data">HACIENDA</div>
                     </div>
                     <div class="intel-segment">
                         <div class="intel-head">S&D</div>
-                        <div class="intel-data">COASTAL</div>
+                        <div class="intel-data">KUROHANA METROPLIS</div>
                     </div>
                     <div class="intel-segment">
                         <div class="intel-head">CONTROL</div>
-                        <div class="intel-data">CROSSFIRE</div>
+                        <div class="intel-data">SEASIDE</div>
                     </div>
                 </div>
             </div>
